--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "method-override": "^3.0.0",
     "mongoose": "^5.5.2"
   },
   "devDependencies": {
